--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="">
         <h1>Hjemmesiden kommer snart!</h1>
         <p>Vi <strong>GLÆDER</strong> os meget til at byde dig velkommen indenfor i vores verden af orangevin.</p>
+        <img src="OrangeVin-25.jpg" alt="" class="gravner">
         <div class="contact">
           <p>info@orangewinecellar.dk</p>
           <p>+45 36 96 95 35</p>
