--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Orangewinecellar</title>
+    <link rel="icon" href="favicon.ico" type='images/x-icon'>
+
     <link rel="stylesheet" href="styles.css">
 
     <!-- MAIN header font-family -->
