--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>Vi <strong>GLÆDER</strong> os meget til at byde dig velkommen indenfor i vores verden af orangevin.</p>
         <img src="OrangeVin-25.jpg" alt="" class="gravner">
         <div class="contact">
+          <h2>Kontakt os her:</h2>
           <p>info@orangewinecellar.dk</p>
           <p>+45 36 96 95 35</p>
         </div>
