--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Orangewinecellar</title>
-    <link rel="icon" href="favicon.ico" type='images/x-icon'>
+    <link rel="icon" href="favicon.png" type='images/x-icon'>
 
     <link rel="stylesheet" href="styles.css">
 
